--- a/05/button.html
+++ b/05/button.html
@@ -25,7 +25,7 @@
                     wrapper.removeChild(oldEl)
                 }
             }
-            mount(new LikeButton(), wrapper)
+            mount(new LikeButton({bgColor: 'red'}), wrapper)
         </script>
     </body>
 </html>
